# handsfree

./: .gitignore  LICENSE  README.md  auto_install_handsfree.sh  clean_build_linux.sh  docker_install
base_simple_controller/: .cproject  .project  CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
base_simple_controller/src/: base_simple_controller.cpp
handsfree_2dnav/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
handsfree_2dnav/launch/: gmapping.launch  gmapping_stone_v2.launch  gmapping_stone_v3.launch  move_base_amcl.launch  move_base_amcl_5cm.launch  move_base_amcl_5cm.launch~  move_base_amcl_stone_v2.launch  move_base_amcl_stone_v3.launch  move_base_amcl_with_smooth.launch  move_base_gmapping.launch  move_base_gmapping.launch~
handsfree_2dnav/map/: bosheng.pgm  bosheng.yaml  bosheng_origin.pgm  handsfree_room.yaml  handsfree_room_backup.pgm  handsfree_room_backup.yaml  handsfree_room_origin.pgm  handsfree_xuda.pgm  lab.pgm  lab.yaml  lab1.pgm  lab1.yaml  lab2.pgm  lab2.yaml  lab2backup.pgm  lab_203.pgm  lab_203.yaml  lab_203_2.yaml  lab_203_xtion.pgm  lab_203_xtion.yaml  lab_a409.yaml  zhaowendao.pgm  zhaowendao.yaml  zhaowendao_blur2x2_threshold.pgm  zhaowendao_blur2x2_threshold.yaml  zhaowendao_p.pgm  zhaowendao_p.yaml  zhaowendao_p_1.pgm  zhaowendao_threshold.pgm  zhaowendao_threshold.yaml
handsfree_2dnav/move_base_config/: base_local_planner_params.yaml  base_local_planner_params.yaml~  costmap_common_params.yaml  move_base.xml  slam_gmapping.xml
handsfree_2dnav/rviz/: HANDSFREE_Robot.rviz
handsfree_2dslam/: CMakeLists.txt  install_slam.sh  package.xml
handsfree_2dslam/launch/: slam.launch
handsfree_2dslam/rviz/: cartographer.rviz
handsfree_2dslam/src/: flat_world_imu_node.cpp
handsfree_ar_tags/: CMakeLists.txt  CMakeLists.txt~  README.md  ar_tags.rviz  package.xml  package.xml~  readme  readme~
handsfree_ar_tags/launch/: ar_follower.launch  ar_indiv_depth_camera.launch  ar_indiv_kinect.launch~  ar_indiv_no_kinect.launch~  ar_indiv_rgb_camera.launch  ar_indiv_with_xtion.launch  ar_indiv_with_xtion.launch~  ar_large_markers_depth_camera.launch  ar_tags_cog.launch  head_follow_ar_marker.launch  head_tracker.launch  robot_follow_ar_marker.launch
handsfree_ar_tags/nodes/: ar_follower.py  ar_tags_cog.py  head_tracker.py
handsfree_ar_tags/rviz/: ar_tags.rviz
handsfree_bringup/: CMakeLists.txt  CMakeLists.txt~  package.xml
handsfree_bringup/android_apk/: make_a_map-kinetic-debug.apk  teleop-kinetic-debug.apk
handsfree_bringup/demo/: gmapping.launch  move_base_amcl.launch  move_base_amcl_handsfree_room.launch  move_base_amcl_handsfree_xuda.launch  move_base_amcl_with_smooth.launch
handsfree_bringup/driver/: robot_driver.launch
handsfree_bringup/launch/: hokuyo.launch  hokuyo.launch~  hokuyo_test.launch  hokuyo_test.launch~  openni_slam.launch  rgbdslam.launch  xtion.launch  xtion_fake_laser_openni2.launch  xtion_fake_laser_openni2.launch~
handsfree_bringup/rviz/: gmapping.rviz  navigation.rviz
handsfree_bringup/script/: RadianTurn.py  RadianTurnDirect.py  rosbag_topic_patrol.sh  rosbag_topic_with_kinect.sh  rosbag_topic_with_xtion.sh
handsfree_bringup/scripts/: hardware_detection.desktop  hardware_detection.sh  kill_ros_node.desktop  kill_ros_node.sh  ps3.desktop  ps3.sh
handsfree_bringup/test/: stone_v2_gmapping.launch  stone_v2_move_base_amcl.launch  stone_v3_gmapping.launch  stone_v3_move_base_amcl.launch
handsfree_camera/: CMakeLists.txt  README.md  package.xml
handsfree_camera/launch/: video2ros.launch
handsfree_camera/monocular/: logitech_usb_cam.xml  test_usb_cam.launch  usb_cam.launch  view_usb_cam.launch
handsfree_camera/rgb-d/: 3dsensor.launch  astra_mini.launch  kinect.launch  realsense.launch  test_kinect.launch  test_xtion.launch  view_astra_mini.launch  view_kinect.launch  view_realsense.launch  view_xtion.launch  xtion.launch
handsfree_camera/robot_tf/: giraffe_v2_tf.xml  stone_v2_tf.xml  stone_v3_tf.xml
handsfree_camera/rviz/: view_kinect.rviz  view_xtion.rviz
handsfree_controller/: CMakeLists.txt  base_simple_controller_plugins.xml  omni_triangle_controller_plugins.xml  package.xml
handsfree_controller/src/: base_simple_controller.cpp  odometry.cpp  omni_triangle_controller.cpp  speed_limiter.cpp
handsfree_gazebo/: CMakeLists.txt  package.xml  package.xml~
handsfree_gazebo/config/: config.yaml  mini_config.yaml  stone_v3_config.yaml
handsfree_gazebo/launch/: demo_gazebo_mini.launch  demo_gazebo_stone_v3.launch  demo_move_base_amcl_mini.launch  demo_move_base_amcl_stone_v3.launch  handsfree_gazebo.launch
handsfree_gazebo/map/: magichouse.pgm  magichouse.yaml
handsfree_gazebo/meshes/: base_link.STL  laser_link.STL  servo_1_link.STL  servo_2_link.STL  wheel_front_link.STL  wheel_left_link.STL  wheel_right_link.STL  xtion_link.STL
handsfree_gazebo/rviz/: navigation.rviz
handsfree_gazebo/urdf/: URDF_HandFree_improved_version.SLDASM_improved.URDF  handsfree.gazebo  handsfree.urdf.xarco  handsfree_base.xacro  handsfree_gazebo.urdf.xarco
handsfree_gazebo/urdf_stone_v3/: common_properties.xacro  gazebo.urdf.xarco  stone_v3_base.xacro  stone_v3_laser_head_xtion.gazebo
handsfree_gazebo/worlds/: magichouse.world  playground.world
handsfree_hw/: CMakeLists.txt  CMakeLists.txt~  config.txt  env.sh  package.xml
handsfree_hw/config/: config.yaml  robolink_config.txt  robolink_config_arm.txt
handsfree_hw/launch/: handsfree_hw.launch  handsfree_hw.launch~  handsfree_hw_arm.launch  handsfree_remote.launch  keyboard_teleop.launch  keyboard_teleop.launch~  keyboard_teleop3.launch  ps3_teleop.launch  view_rviz.launch  xbox360_teleop.launch
handsfree_hw/rviz/: handsfree_hw.rviz
handsfree_hw/src/: hf_hw.cpp  hf_hw.cpp~  hf_hw_ros.cpp  hf_hw_ros.cpp~  main.cpp  transport_serial.cpp  transport_serial.cpp~
handsfree_msgs/: CMakeLists.txt  CMakeLists.txt~  package.xml
handsfree_msgs/msg/: PoseEuler.msg  arm_state.msg  (+5 more)
handsfree_smach/: CMakeLists.txt  package.xml
handsfree_teleop/: CMakeLists.txt  package.xml
handsfree_tutorials/: CMakeLists.txt  README.md  package.xml
(+358 files in other folders)
