<?xml version="1.0"?>
<package>
  <name>base_simple_controller</name>
  <version>0.1.0</version>
  <description>The base_simple_controller for base_velocity controller </description>

  <maintainer email="liao@126.com">liao</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>

  <build_depend>handsfree_hw</build_depend>
  <run_depend>handsfree_hw</run_depend>

  <export>
    <controller_interface plugin="${prefix}/base_simple_controller_plugins.xml"/>
  </export>
</package>
