<?xml version="1.0"?>
<package>
  <name>handsfree_ar_tags</name>
  <version>0.1.0</version>
  <description>HandsFree - AR Tags</description>

  <maintainer email="hands_free@126.com">HandsFree</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.hfreetech.org</url>
  <url type="bugtracker">https://github.com/HANDS-FREE/handsfree/issues</url>
  <author email="315261982@qq.com">WenKe Ma</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ar_track_alvar</build_depend>
  <build_depend>ar_track_alvar_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>ar_track_alvar</run_depend>
  <run_depend>ar_track_alvar_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
