<?xml version="1.0"?>
<package>
  <name>handsfree_hw</name>
  <version>1.1.0</version>
  <description>The handsfree_hw package for robolink communication with embeded system ,ros_control frame 
  </description>

  <maintainer email="hands_free@126.com">HandsFree Team</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.hfreetech.org</url>
  <url type="bugtracker">https://github.com/HANDS-FREE/handsfree/issues</url>
  <author email="315261982@qq.com">WenKe Ma</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>handsfree_msgs</build_depend>
  <run_depend>handsfree_msgs</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
