<?xml version="1.0"?>
<package>
  <name>handsfree_teleop</name>
  <version>1.1.0</version>
  <description>Provides teleoperation using joysticks or keyboard.</description>

  <maintainer email="hands_free@126.com">HandsFree Team</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.hfreetech.org</url>
  <url type="bugtracker">https://github.com/HANDS-FREE/handsfree/issues</url>
  <author email="315261982@qq.com">WenKe Ma</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>

  <export>

  </export>
</package>
